--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
 			$scope.getAward = function (pts) {
 				var gold = ($scope.person.commando) ? 85 : 80;
 				console.log(gold);
-				if (pts > gold) {
+				if (pts >= gold) {
 					$scope.comments = '';
 					return "Gold";
-				} else if (pts > 70) {
+				} else if (pts >= 70) {
 					$scope.comments = (gold - pts) + " more points to GOLD";
 					return "Silver";
-				} else if (pts > 60) {
+				} else if (pts >= 60) {
 					$scope.comments = (70 - pts) + " more points to SILVER";
 					return "Pass with Incentive";
-				} else if (pts > 50) {
+				} else if (pts >= 50) {
 					$scope.comments = (60 - pts) + " more points to INCENTIVE";
 					return "Pass";
 				} else {
