--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>IPPT</title>
+		<title>New IPPT Score Calculator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
 	<body ng-app="ipptApp" style="margin-top: 20px;">
 		<div class="row" ng-controller="calculatorCtrl">
 			<div class="medium-6 columns medium-offset-3">
-				<h3>IPPT Calculator</h3>
+				<h3>IPPT Score Calculator</h3>
 
 				<div class="row collapse">
 					<div class="small-4 columns">	
