Add source code availability line

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		label.score {
 			margin-left: 10px;
 		}
+		html, body {
+			overflow-x: hidden;
+		}
 		</style>
 	</head>
 	<body ng-app="ipptApp" style="margin-top: 20px;">
@@ -85,10 +88,10 @@
 				</p>
 			</div>
 			<div class="row">
-				<div class="medium-6 columns medium-offset-3">
+				<div class="small-12 medium-6 columns medium-offset-3">
 					<hr>
 					<small>
-						Built in AngularJS by <a href="https://www.linkedin.com/in/johnldz" target="_blank">John Luo</a><br/>
+						Built in AngularJS by <a href="https://www.linkedin.com/in/johnldz" target="_blank">John Luo</a>. Source code on <a href="https://github.com/johnldz/IPPT-Calculator" target="_blank">GitHub</a>.<br/>
 						Questions, comments? Reach me at <a href="mailto:johnldz@icloud.com">johnldz@icloud.com</a>
 					</small>
 				</div>
