Bug fix checkbox not working

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<div class="row collapse">
 					<div class="small-12 columns">	
-						<input id="commando" ng-model="person.commando" type="checkbox"><label for="commando">Commando / Diver / Guard</label>
+						<input id="commando" ng-model="person.commando" type="checkbox" ng-change="calculate()"><label for="commando">Commando / Diver / Guard</label>
 					</div>
 				</div>
 
