Bug fix age range 24-26 where 60 push ups gives 0 points

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 			$scope.getStaticPoints = function(age, count) {
 				var idx = (age - 22 < 0) ? 0 : (age - 22);
 				var minReps = staticRepArray[idx];
-				var pointsIdx = ((count - minReps) > staticPointArray.length) ? staticPointArray.length - 1: count - minReps;
+				var pointsIdx = ((count - minReps) >= staticPointArray.length) ? staticPointArray.length - 1: count - minReps;
 				return (staticPointArray[pointsIdx]) ? staticPointArray[pointsIdx] : 0;
 			}
 
